Allow date cancellation

--- a/static/style.css
+++ b/static/style.css
@@ -36,3 +36,16 @@
     color: #a94442;
     background-color: #f2dede;
 }
+
+.grid-cell {
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+    margin: 15px;
+    padding: 5px;
+    position: relative;
+}
+
+.float-top-right {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+}
